deployment: build works, start script added

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>JPFP</title>
+    <title>Pokemon TCG</title>
     <script src="/bundle.js" defer></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1>Hello world!</h1>
+      <p>grace-shopper is not yet open :(</p>
+    </div>
   </body>
 </html>
