--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <title>Pokemon TCG</title>
+    <link rel="stylesheet" href="../src/index.css"/>
     <script src="/bundle.js" defer></script>
   </head>
   <body>
     <div id="root">
-      <h1>Hello world!</h1>
-      <p>grace-shopper is not yet open :(</p>
     </div>
+    <p>grace-shopper is not yet open :(</p>
   </body>
 </html>
