--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
     <div id="root">
     </div>
     <p>grace-shopper is not yet open :(</p>
+    <p>but this is now an express app!</p>
   </body>
 </html>
