--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Pokemon TCG</title>
-    <link rel="stylesheet" href="../src/index.css"/>
+    <link rel="stylesheet" href="../public/style/style.css"/>
     <script src="/bundle.js" defer></script>
   </head>
   <body>
