added Login.js Register.js and userauthentication in User model

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
   <head>
     <title>Pokemon TCG</title>
-    <link rel="stylesheet" href="../public/style/style.css"/>
+    <link rel="stylesheet" href="./style/style.css"/>
     <script src="/bundle.js" defer></script>
   </head>
   <body>
-    <div id="root">
-    </div>
-    <p>grace-shopper is not yet open :(</p>
-    <p>but this is now an express app!</p>
+    <div id="root"></div>
   </body>
 </html>
