bug fixed: css working, ignore placeholder styling for dev purposes

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <title>Pokemon TCG</title>
-    <link rel="stylesheet" type="text/css" src="../public/style/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/style/style.css"/>
     <script src="/bundle.js" defer></script>
   </head>
   <body>
     <div id="root">
     </div>
+    <img src="../development-wireframes/graceShopper_home.jpeg"/>
   </body>
 </html>
