--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Pokemon TCG</title>
-    <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="./favicon.ico?" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="/style/style.css"/>
     <script src="/bundle.js" defer></script>
   </head>
